cabal-version:      3.0
name:               aoc24
version:            0.1.0.0
synopsis:           Advent of Code 2024
description:        Advent of Code 2024 solutions written in Haskell
license:            MIT
license-file:       LICENSE
author:             Stian Sørby
maintainer:         51554341+ssouthcity@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    
      base ^>=4.18.2.1,
      attoparsec >=0.13,
      text >=2.0
    exposed-modules:
      Day01
      Day02
      Day03
      Day04
      Day05
      Day06
      Day07
      Day08
      Day09
      Day10
      Day11
      Day12
      Day13
      Day14
      Day15
      Day16
      Day17
      Day18
      Day19
      Day20
      Day21
      Day22
      Day23
      Day24
      Day25
      Input
      Solvers

executable aoc24
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base ^>=4.18.2.1,
        aoc24
    default-language: Haskell2010

test-suite aoc24-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:
        base ^>=4.18.2.1,
        aoc24,
        HUnit
    hs-source-dirs:   test
    other-modules:
      Day01Spec
      Day02Spec
      Day03Spec
      Day04Spec
      Day05Spec
      Day06Spec
      Day07Spec
      Day08Spec
      Day09Spec
      Day10Spec
      Day11Spec
      Day12Spec
      Day13Spec
      Day14Spec
      Day15Spec
      Day16Spec
      Day17Spec
      Day18Spec
      Day19Spec
      Day20Spec
      Day21Spec
      Day22Spec
      Day23Spec
      Day24Spec
      Day25Spec
    default-language: Haskell2010
